[package]
name = "lahulottemigrator"
version = "0.1.0"
authors = ["gsurrel <1993113+gsurrel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.2", features = ["blocking"]}
anyhow = "1.0.38"
roxmltree = "0.14.0"